--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
+  
+  <!-- moveable -->
+  <script src="//daybrush.com/moveable/release/latest/dist/moveable.min.js"></script>
+  
   <title>React App</title>
 
   <script>
